# libcsptr

./: meson.build
src/: config.h.in
